--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "morgan": "^1.10.0",
     "mosca": "^2.8.3",
     "mqtt": "^4.1.0",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
