--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "devDependencies": {
     "eslint": "^7.4.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "migrate:all": "npx sequelize db:migrate",
+    "migrate:undo": "npx sequelize db:migrate:undo:all"
   },
   "keywords": [],
   "author": "",
