--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "mosca": "^2.8.3",
     "mqtt": "^4.1.0",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.3",
@@ -20,13 +20,17 @@
   },
   "devDependencies": {
     "eslint": "^7.4.0",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "sequelize-cli": "^6.2.0"
   },
   "scripts": {
     "dev": "nodemon app.js",
-    "migrate": "npx sequelize db:migrate",
-    "migrate:undo": "npx sequelize db:migrate:undo:all"
+    "migrate:dev": "npx sequelize db:migrate",
+    "migrate:dev:undo": "npx sequelize db:migrate:undo:all",
+    "migrate:test": "npx sequelize-cli db:migrate --env 'test'",
+    "migrate:test:undo": "npx sequelize-cli db:migrate:undo:all --env 'test'",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
