--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
+    "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mqtt": "^4.1.0",
@@ -26,6 +27,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "scripts": {
+    "start": "pm2-runtime start ecosystem.config.js --env production",
     "dev": "nodemon app.js",
     "migrate:dev": "npx sequelize db:migrate",
     "migrate:dev:undo": "npx sequelize db:migrate:undo:all",
