--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start": "node app.js",
     "dev": "nodemon app.js",
     "migrate:dev": "npx sequelize db:migrate",
     "migrate:dev:undo": "npx sequelize db:migrate:undo:all",
